// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selected || !options is false 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY_6"
  data-tip="FOO_TOOLTIP"
>
  <div
    className="flex-100 layout-row layout-align-center-center"
  >
    <NamedSelect
      className="flex-100"
      clearable={false}
      onChange={[Function]}
      options={Array []}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      value={false}
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY_0"
  data-tip="FOO_TOOLTIP"
>
  <form>
    <RoundButton
      active={true}
      back={false}
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass=""
      inverse={false}
      size="small"
      text="Upload"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <ReactTooltip
      className="tooltip"
      effect="solid"
      id="RANDOM_KEY_0"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
    <input
      name="FOO_TYPE"
      onChange={[Function]}
      type="file"
    />
  </form>
</div>
`;

exports[`state.error is true 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY_4"
  data-tip="FOO_TOOLTIP"
>
  <form>
    <RoundButton
      active={true}
      back={false}
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass=""
      inverse={false}
      size="small"
      text="Upload"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <ReactTooltip
      className="tooltip"
      effect="solid"
      id="RANDOM_KEY_4"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
    <input
      name="FOO_TYPE"
      onChange={[Function]}
      type="file"
    />
  </form>
</div>
`;

exports[`state.selected is true 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY_2"
  data-tip="FOO_TOOLTIP"
>
  <form>
    <RoundButton
      active={true}
      back={false}
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass=""
      inverse={false}
      size="small"
      text="Upload"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <ReactTooltip
      className="tooltip"
      effect="solid"
      id="RANDOM_KEY_2"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
    <input
      name="FOO_TYPE"
      onChange={[Function]}
      type="file"
    />
  </form>
</div>
`;
